--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.0.0'
     implementation 'org.jetbrains.anko:anko:0.10.5'
+    implementation 'com.romandanylyk:pageindicatorview:1.0.3'
+
 
 }
