--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,6 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'org.jetbrains.anko:anko:0.10.5'
     implementation 'com.romandanylyk:pageindicatorview:1.0.3'
-
-
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
