When I clicked on a webtoon from the webtoonist list, I went to a screen where I can see the webtoon, and when I clicked the heart on the screen, it made me go to the page where I can see the comment.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ProductActivity"></activity>
+        <activity android:name=".CommentActivity"></activity>
+        <activity android:name=".InWebToonActivity" />
+        <activity android:name=".ProductActivity" />
         <activity android:name=".SignupActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".LoginActivity">
