--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".SplashActivity"></activity>
+        <activity android:name=".Main2Activity"></activity>
+        <activity android:name=".WriteCommentActivity" />
+        <activity android:name=".SplashActivity" />
         <activity android:name=".CommentActivity" />
         <activity android:name=".InWebToonActivity" />
         <activity android:name=".ProductActivity" />
